src/objects/Meta_Tag__c.object
<CustomObject>
    <description>Ability to add custom meta tags on Web App pages.</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>Choose which application this tag is targeting.</description>
        <inlineHelpText>Choose which application this tag is targeting.</inlineHelpText>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Open Graph</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship between a Meta Tag and atom, used within Web App.</description>
        <inlineHelpText>Which atom, if any, is this tag going to be globally applied to?</inlineHelpText>
        <label>Atom</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Meta Tags</relationshipLabel>
        <relationshipName>Meta_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>Additional attributes on the tag.</description>
        <inlineHelpText>Choose tag attribute.</inlineHelpText>
        <label>Attribute</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tag__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Width</fullName>
                </value>
                <value>
                    <fullName>Height</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Secure_URL</fullName>
                </value>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Tag</fullName>
                </value>
                <value>
                    <fullName>Alt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>Content attribute for meta tag.</description>
        <inlineHelpText>What is displayed with this meta tag.</inlineHelpText>
        <label>Content</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>The name attribute for meta tags.</description>
        <inlineHelpText>The name attribute defines a description, keyword, or author.</inlineHelpText>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship between a Meta Tag and page, used within Web App</description>
        <inlineHelpText>Which page, if any, is this tag going to be globally applied to?</inlineHelpText>
        <label>Page</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipLabel>Meta Tags</relationshipLabel>
        <relationshipName>Meta_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <description>Property meta tag attribute.</description>
        <formula>IF( ISPICKVAL( Application__c ,&apos;Facebook&apos; ),&apos;fb&apos; ,  IF( ISPICKVAL( Application__c , &apos;Open Graph&apos;) , &apos;og&apos;, LOWER(text(Application__c)) ) ) + if(!isBlank(text(Tag__c)), &apos;:&apos;, &apos;&apos;)+  LOWER( TEXT(Tag__c) )  + if(!isBlank(text( Attribute__c )), &apos;:&apos;, &apos;&apos;)+ LOWER(TEXT(Attribute__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship between a Meta Tag and site, used within Web App.</description>
        <inlineHelpText>Which site, if any, is this tag going to be globally applied to?</inlineHelpText>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Meta Tags</relationshipLabel>
        <relationshipName>Meta_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <description>Card tag within application.</description>
        <inlineHelpText>Choose application tag.</inlineHelpText>
        <label>Tag</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>App_ID</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Published_time</fullName>
                </value>
                <value>
                    <fullName>Modified_time</fullName>
                </value>
                <value>
                    <fullName>Author</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Property_As_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Property As Name</label>
        <type>Checkbox</type>
    </fields>
    <label>Meta Tag</label>
    <nameField>
        <displayFormat>Meta-{0}</displayFormat>
        <label>Meta Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meta Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Has_Name_or_Application</fullName>
        <active>true</active>
        <description>Ensures that there is a value in either the Name or Application custom fields before saving a record, as Meta Tags must have either a Property or Name attribute along with Content.</description>
        <errorConditionFormula>AND( ISBLANK( text(Application__c) ), ISBLANK(  Name__c  ))</errorConditionFormula>
        <errorMessage>Must have either a Name or Application entered.  Please enter a Name or Application.</errorMessage>
    </validationRules>
</CustomObject>